Cleaned up Dom's code